Affinage de la structure HTML et ajout d'une array de characters

--- a/Simulateur_de_combat/index.html
+++ b/Simulateur_de_combat/index.html
@@ -18,6 +18,12 @@
         <article class="game_container">
             <section class="opponents_columns">
                 <section class="first_opponent_column">
+                    <select class="opponent_selector">
+                        <option value="human">Human</option>
+                        <option value="animal">Animal</option>
+                        <option value="monster">Monster</option>
+                        <option value="boss">Boss</option>
+                    </select>
                     <img class="first_opponent_img" href="#">
                     <section class="stats">
 
@@ -25,11 +31,17 @@
 
                 </section>
                 <section class="second_opponent_column">
+                    <select class="opponent_selector">
+                        <option value="human">Human</option>
+                        <option value="animal">Animal</option>
+                        <option value="monster">Monster</option>
+                        <option value="boss">Boss</option>
+                    </select>
                     <img class="second_opponent_img" href="#">
                     <section class="stats">
 
                     </section>
-                    
+
                 </section>
             </section>
             <section>
