Possibilité de choisir les combattants selon le 'type' (animal, humain, monstre, boss)

--- a/Simulateur_de_combat/index.html
+++ b/Simulateur_de_combat/index.html
@@ -18,11 +18,15 @@
         <article class="game_container">
             <section class="opponents_columns">
                 <section class="first_opponent_column">
-                    <select class="opponent_selector">
+                    <select class="first_opponent_selector">
+                        <option value="">Choose a type</option>
                         <option value="human">Human</option>
                         <option value="animal">Animal</option>
                         <option value="monster">Monster</option>
                         <option value="boss">Boss</option>
+                    </select>
+                    <select class="first_sublist_container">
+
                     </select>
                     <img class="first_opponent_img" href="#">
                     <section class="stats">
@@ -31,11 +35,15 @@
 
                 </section>
                 <section class="second_opponent_column">
-                    <select class="opponent_selector">
+                    <select class="second_opponent_selector">
+                        <option value="">Choose a type</option>
                         <option value="human">Human</option>
                         <option value="animal">Animal</option>
                         <option value="monster">Monster</option>
                         <option value="boss">Boss</option>
+                    </select>
+                    <select class="second_sublist_container">
+
                     </select>
                     <img class="second_opponent_img" href="#">
                     <section class="stats">
