Début de la fonction fight

--- a/Simulateur_de_combat/index.html
+++ b/Simulateur_de_combat/index.html
@@ -51,7 +51,7 @@
                 </section>
             </section>
             <section>
-                <button>Fight !</button>
+                <button class="fight_button">Fight !</button>
             </section>
         </article>
     </main>
