--- a/Simulateur_de_combat/index.html
+++ b/Simulateur_de_combat/index.html
@@ -53,6 +53,9 @@
             <section>
                 <button class="fight_button">Fight !</button>
             </section>
+            <section class="fight_results">
+
+            </section>
         </article>
     </main>
     <script src="script.js"></script>
