Refonte du CSS en cours

--- a/Simulateur_de_combat/index.html
+++ b/Simulateur_de_combat/index.html
@@ -50,7 +50,7 @@
 
                 </section>
             </section>
-            <section>
+            <section class="fight_button_container"> 
                 <button class="fight_button">Fight !</button>
             </section>
             <section class="fight_results">
